--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_login">로그인</string>
     <string name="action_signup">회원가입</string>
     <string name="action_signup_info">사업자 정보 입력</string>
+    <string name="action_reset_password">비밀번호 재설정</string>
     <string name="welcome">환영합니다!</string>
     <string name="invalid_email">유효한 이메일 주소를 입력해주세요.</string>
     <string name="invalid_password">비밀번호는 최소 6자 이상이어야 합니다.</string>
@@ -47,4 +48,9 @@
     <string name="daum">daum.net</string>
     <string name="nate">nate.com</string>
     <string name="prompt_company_contact">사업장 연락처</string>
+    <string name="guide_email_for_password_reset">비밀번호 재설정을 위한 이메일 주소</string>
+    <string name="action_send_email">이메일 보내기</string>
+
+    <string name="send_email_succeed">"비밀번호 재설정 이메일이 전송되었습니다."</string>
+    <string name="send_email_failed">"오류가 발생했습니다. 다시 시도해주세요."</string>
 </resources>
