--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
 
     <string name="send_email_succeed">"비밀번호 재설정 이메일이 전송되었습니다."</string>
     <string name="send_email_failed">"오류가 발생했습니다. 다시 시도해주세요."</string>
+
+    <string name="user_cannot_found">"가입되어있지 않은 이메일입니다."</string>
 </resources>
