--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -23,4 +23,45 @@
     <string name="review_tab_height">키</string>
     <string name="review_tab_weight">체중</string>
     <string name="review_tab_default_size">평소사이즈</string>
+
+    <!-- 고진호 String -->
+    <string name="error_email_required">이메일을 입력해주세요.</string>
+    <string name="error_invalid_email_format">이메일 양식이 올바르지 않습니다.</string>
+    <string name="error_password_length">비밀번호는 6자 이상이어야 합니다.</string>
+    <string name="error_passwords_not_match">비밀번호가 일치하지 않습니다.</string>
+    <string name="error_consent_required">정보 동의를 체크해주세요.</string>
+    <string name="findinfokey">key</string>
+    <string name="findid">findId </string>
+    <string name="resetpassword">resetPassword</string>
+    <string name="login_success">로그인 성공</string>
+    <string name="login_failure">로그인 실패 이메일 또는 비밀번호를 확인해주세요.</string>
+    <string name="key_generic">key</string>
+    <string name="action_find_id">findId</string>
+    <string name="title_find_id">아이디 찾기</string>
+    <string name="title_reset_password">비밀번호 찾기</string>
+    <string name="message_your_email_is">당신의 이메일은 </string>
+    <string name="message_email_template">%s 입니다</string>
+    <string name="error_no_user_matching_info">입력한 정보로 등록된 사용자가 없습니다.</string>
+    <string name="title_notification">알림</string>
+    <string name="message_password_reset_email_sent">비밀번호 재전송 이메일을 발송했습니다.</string>
+    <string name="action_confirm">확인</string>
+    <string name="error_password_reset_failed">비밀번호 재설정 실패했습니다.</string>
+    <string name="error_nickname_required">닉네임을 입력해주세요.</string>
+    <string name="error_phone_required">전화번호를 입력해주세요.</string>
+    <string name="title_signup">회원가입</string>
+    <string name="error_check_id_duplication">아이디 중복검사를 진행해주세요.</string>
+    <string name="signup_success">회원가입에 성공했습니다. 로그인해주세요.</string>
+    <string name="signup_failure">회원가입에 실패했습니다.</string>
+    <string name="error_email_already_exists">이미 존재하는 이메일입니다.</string>
+    <string name="message_email_available">이메일을 사용할 수 있습니다.</string>
+    <string name="duration_less_than_1_year">1년 이하</string>
+    <string name="duration_less_than_3_years">3년 이하</string>
+    <string name="duration_less_than_5_years">5년 이하</string>
+    <string name="duration_more_than_5_years">5년 이상</string>
+    <string name="duration_no_selection">선택안함</string>
+    <string name="mypage_title">마이 페이지</string>
+    <string name="alert_message_login_required">로그인이 필요한 서비스입니다.</string>
+    <string name="alert_message_logout_completed">로그아웃 완료되었습니다.</string>
+    <string name="nickname_is">닉네임 : %s</string>
+
 </resources>
