--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -223,4 +223,12 @@
     <string name="bag">가방</string>
     <string name="water_toy">물놀이용품</string>
     <string name="prompt_hashtag">해시태그</string>
+    <string name="product_manage_subheader_title">상품 관리</string>
+    <string name="add_product_title">상품 등록</string>
+    <string name="view_modify_product_title">상품 조회/수정</string>
+    <string name="manage_order_ship_title">주문/배송 관리</string>
+    <string name="cs_subheader_title">CS</string>
+    <string name="manage_notice_title">공지 관리</string>
+    <string name="manage_inquiry_title">문의 관리</string>
+    <string name="setting_title">설정</string>
 </resources>
