product 관련 data class 변경 seller 에게 넘겨줄 order 객체 생성 option -> color, size 세분화 itemdetail 페이지로 이동하는 백 버튼 오류 해결 spinnerList strings.xml을 통한 교체 완료

--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="item_search">검색</string>
     <string name="item_shopping_cart">장바구니</string>
     <string name="paymentButton">구매하기</string>
+
+    <!-- payment / spinner items -->
+    <string-array name="spinner_items">
+        <item name="spinner1">배송 메세지 선택</item>
+        <item name="spinner2">안전한 배송 부탁드려요</item>
+        <item name="spinner3">빠른 배송 부탁드려요</item>
+        <item name="spinner4">부재 시 전화주세요</item>
+        <item name="spinner5">문 앞에 배송 부탁드려요</item>
+    </string-array>
+
 </resources>
