feat : [소비자용] 상품후기 화면 개발

--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -23,4 +23,69 @@
     <string name="review_tab_height">키</string>
     <string name="review_tab_weight">체중</string>
     <string name="review_tab_default_size">평소사이즈</string>
+    <string name="bottom_sheet_149_cm">149 cm 이하</string>
+    <string name="bottom_sheet_150_152_cm">150 ~ 152 cm</string>
+    <string name="bottom_sheet_153_155cm">153 ~ 155cm</string>
+    <string name="bottom_sheet_156_158_cm">156 ~ 158 cm</string>
+    <string name="bottom_sheet_159_161_cm">159 ~ 161 cm</string>
+    <string name="bottom_sheet_162_164_cm">162 ~ 164 cm</string>
+    <string name="bottom_sheet_165_167_cm">165 ~ 167 cm</string>
+    <string name="bottom_sheet_168_170_cm">168 ~ 170 cm</string>
+    <string name="bottom_sheet_171_173_cm">171 ~ 173 cm</string>
+    <string name="bottom_sheet_174_176_cm">174 ~ 176 cm</string>
+    <string name="bottom_sheet_177_179_cm">177 ~ 179 cm</string>
+    <string name="bottom_sheet_180_182_cm">180 ~ 182 cm</string>
+    <string name="bottom_sheet_183_185_cm">183 ~ 185 cm</string>
+    <string name="bottom_sheet_186_188_cm">186 ~ 188 cm</string>
+    <string name="bottom_sheet_189_191_cm">189 ~ 191 cm</string>
+    <string name="bottom_sheet_191_cm">191 cm 이상</string>
+    <string name="bottom_sheet_44_kg">44 kg 이하</string>
+    <string name="bottom_sheet_45_47_kg">45 ~ 47 kg</string>
+    <string name="bottom_sheet_48_50_kg">48 ~ 50 kg</string>
+    <string name="bottom_sheet_51_53_kg">51 ~ 53 kg</string>
+    <string name="bottom_sheet_54_56_kg">54 ~ 56 kg</string>
+    <string name="bottom_sheet_57_59_kgm">57 ~ 59 kgm</string>
+    <string name="bottom_sheet_60_62_kg">60 ~ 62 kg</string>
+    <string name="bottom_sheet_63_65_kg">63 ~ 65 kg</string>
+    <string name="bottom_sheet_66_68_kg">66 ~ 68 kg</string>
+    <string name="bottom_sheet_69_71_kg">69 ~ 71 kg</string>
+    <string name="bottom_sheet_72_74_kg">72 ~ 74 kg</string>
+    <string name="bottom_sheet_75_77_kg">75 ~ 77 kg</string>
+    <string name="bottom_sheet_78_80_kg">78 ~ 80 kg</string>
+    <string name="bottom_sheet_81_83_kg">81 ~ 83 kg</string>
+    <string name="bottom_sheet_84_86_kg">84 ~ 86 kg</string>
+    <string name="bottom_sheet_87_89_kg">87 ~ 89 kg</string>
+    <string name="bottom_sheet_90_92_kg">90 ~ 92 kg</string>
+    <string name="bottom_sheet_93_95_kg">93 ~ 95 kg</string>
+    <string name="bottom_sheet_96_98_kg">96 ~ 98 kg</string>
+    <string name="bottom_sheet_99_101_kg">99 ~ 101 kg</string>
+    <string name="bottom_sheet_102_104_kg">102 ~ 104 kg</string>
+    <string name="bottom_sheet_105_107_kg">105 ~ 107 kg</string>
+    <string name="bottom_sheet_108_110_kg">108 ~110 kg</string>
+    <string name="bottom_sheet_111_113_kg">111 ~ 113 kg</string>
+    <string name="bottom_sheet_114_116_kg">114 ~ 116 kg</string>
+    <string name="bottom_sheet_117_119_kg">117 ~ 119 kg</string>
+    <string name="bottom_sheet_120_122_kg">120 ~ 122 kg</string>
+    <string name="bottom_sheet_123_125_kg">123 ~ 125 kg</string>
+    <string name="bottom_sheet_126_128_kg">126 ~ 128 kg</string>
+    <string name="bottom_sheet_129_131_kg">129 ~ 131 kg</string>
+    <string name="bottom_sheet_132_134_kg">132 ~ 134 kg</string>
+    <string name="bottom_sheet_135_137_kg">135 ~137 kg</string>
+    <string name="bottom_sheet_138_140_kg">138 ~ 140 kg</string>
+    <string name="bottom_sheet_141_143_kg">141 ~ 143 kg</string>
+    <string name="bottom_sheet_144_146_kg">144 ~ 146 kg</string>
+    <string name="bottom_sheet_147_149_kg">147 ~ 149 kg</string>
+    <string name="bottom_sheet_150_kg">150 kg 이상</string>
+    <string name="bottom_sheet_size_4xs">4XS</string>
+    <string name="bottom_sheet_size_3xs">3XS</string>
+    <string name="bottom_sheet_size_2xs">2XS</string>
+    <string name="bottom_sheet_size_xs">XS</string>
+    <string name="bottom_sheet_size_m">M</string>
+    <string name="bottom_sheet_size_L">L</string>
+    <string name="bottom_sheet_size_XL">XL</string>
+    <string name="bottom_sheet_size_2XL">2XL</string>
+    <string name="bottom_sheet_size_3XL">3XL</string>
+    <string name="review_item_custom_info">맞춤 정보</string>
+    <string name="review_item_selection_option">선택옵션</string>
+    <string name="review_item_item_evaluation">상품평</string>
 </resources>
