--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -226,4 +226,5 @@
     <string name="test_guide1">[상품 등록] 에서 상품의 정보를 입력하고 등록할 수 있습니다.</string>
     <string name="test_guide2">[상품 조회] 에서 상품 목록을 확인할 수 있습니다.</string>
     <string name="test_guide3">[상품 조회] 에서 각 상품을 클릭하면 [상품 상세] 로 이동합니다.</string>
+    <string name="button_delete_image">이미지 삭제 버튼</string>
 </resources>
