--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -236,4 +236,5 @@
     <string name="mypage_title">마이페이지</string>
     <string name="label_edit_password">비밀번호 수정</string>
     <string name="label_payment_completed">결제완료</string>
+    <string name="no_order">이런! 주문이 없네요</string>
 </resources>
