--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -239,4 +239,5 @@
     <string name="menu_title">메뉴</string>
     <string name="mypage_title">마이페이지</string>
     <string name="label_edit_password">비밀번호 수정</string>
+    <string name="prompt_delete">삭제</string>
 </resources>
