--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="address_added_failure">배송지 추가에 실패하였습니다. 다시 시도해주세요.</string>
     <string name="error_name_required">이름을 입력해주세요.</string>
     <string name="error_detail_delivery_point_required">상세 주소를 입력해주세요.</string>
+    <string name="error_nickname_none">사용자 닉네임을 찾을 수 없습니다.</string>
 
     <string name="bottom_sheet_149_cm">149 cm 이하</string>
     <string name="bottom_sheet_150_152_cm">150 ~ 152 cm</string>
