--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -195,6 +195,7 @@
 
     <!-- 상품 목록 필터링 -->
     <string-array name="productFilter">
+        <item>전체</item>
         <item>여성</item>
         <item>남성</item>
         <item>아동</item>
@@ -203,9 +204,9 @@
 
     <!-- 상품 목록 정렬 -->
     <string-array name="productSort">
-        <item>가격순</item>
-        <item>이름순</item>
         <item>등록순</item>
+        <item>이름순</item>
+        <item>가격순</item>
     </string-array>
 
     <string name="action_add_product">상품등록 하기</string>
