--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -267,4 +267,7 @@
     <string name="label_shipping_await">배송준비</string>
     <string name="label_shipping_continue">배송중</string>
     <string name="label_shipping_completed">배송완료</string>
+    <string name="tab_label_detail">상품상세</string>
+    <string name="tab_label_review">상품후기</string>
+    <string name="tab_label_qna">Q&amp;A</string>
 </resources>
