--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -58,10 +58,10 @@
     <string name="send_email_succeed">"비밀번호 재설정 이메일이 전송되었습니다."</string>
     <string name="send_email_failed">"오류가 발생했습니다. 다시 시도해주세요."</string>
 
-
     <string name="user_cannot_found">"가입되어있지 않은 이메일입니다."</string>
     <string name="contact_phone_cannot_found">"가입되어있지 않은 연락처입니다."</string>
 
+    <!-- Strings related to product -->
     <!-- 대분류 -->
     <string-array name="categoryMain">
         <item>여성</item>
@@ -211,9 +211,8 @@
         <item>가격 높은순</item>
     </string-array>
 
-
-    <string name="action_add_product">상품등록 하기</string>
-    <string name="prompt_product_count">등록된 상품이 0건 있습니다.</string>
+    <string name="action_add_product">상품 등록하기</string>
+    <string name="add_product_count">등록된 상품이 0건 있습니다.</string>
     <string name="prompt_add_product">판매 상품을 등록해주세요.</string>
     <string name="prompt_add_product_title">상품 등록</string>
     <string name="prompt_main_image">상품 이미지 (최대 5개)</string>
@@ -243,9 +242,10 @@
     <string name="bag">가방</string>
     <string name="water_toy">물놀이용품</string>
     <string name="prompt_hashtag">해시태그</string>
-    <string name="test_guide1">[상품 등록] 에서 상품의 정보를 입력하고 등록할 수 있습니다.</string>
-    <string name="test_guide2">[상품 조회] 에서 상품 목록을 확인할 수 있습니다.</string>
-    <string name="test_guide3">[상품 조회] 에서 각 상품을 클릭하면 [상품 상세] 로 이동합니다.</string>
+    <string name="guide_add_product">SWIMMER 쇼핑몰에서 판매할 상품을 등록할 수 있습니다. 아래와 같이 항목에 해당하는 상품 정보를 기입 해주세요.</string>
+    <string name="guide_add_option">상품에 대해 색상, 사이즈 옵션을 추가할 수 있습니다.</string>
+    <string name="guide_product_list">등록한 상품 목록을 확인할 수 있습니다.</string>
+    <string name="guide_product_detail">상품의 상세 정보와 판매자 앱에서 보일 화면의 미리보기를 확인할 수 있습니다.</string>
     <string name="button_delete_image">이미지 삭제 버튼</string>
     <string name="product_manage_subheader_title">상품 관리</string>
     <string name="add_product_title">상품 등록</string>
