feat : 개발 안된 페이지 Lottie 이미지로 대체

--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -196,4 +196,5 @@ Swimmer은 다음의 목적을 위하여 개인정보를 처리하고 있으며,
 ① ‘Swimmer’은 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. 이용자는 쿠키 설치에 대한 선택권을 가지고 있으며, 웹브라우저의 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\n
 ]]>
 </string>
+    <string name="developing">개발중입니다</string>
 </resources>
