--- a/Swimmer_seller/app/src/main/res/values/strings.xml
+++ b/Swimmer_seller/app/src/main/res/values/strings.xml
@@ -61,7 +61,11 @@
     <string name="user_cannot_found">"가입되어있지 않은 이메일입니다."</string>
     <string name="contact_phone_cannot_found">"가입되어있지 않은 연락처입니다."</string>
 
-    <!-- Strings related to product -->
+    <!-- Strings related to home -->
+    <string name="home_product_add_button">상품 등록하기</string>
+    <string name="home_product_count">등록된 상품이 0건 있습니다.</string>
+    <string name="home_product_text">판매 상품을 등록해주세요.</string>
+
     <!-- 대분류 -->
     <string-array name="categoryMain">
         <item>여성</item>
@@ -211,12 +215,9 @@
         <item>가격 높은순</item>
     </string-array>
 
-    <string name="action_add_product">상품 등록하기</string>
-    <string name="add_product_count">등록된 상품이 0건 있습니다.</string>
-    <string name="prompt_add_product">판매 상품을 등록해주세요.</string>
-    <string name="prompt_add_product_title">상품 등록</string>
-    <string name="prompt_main_image">상품 이미지 (최대 5개)</string>
-    <string name="prompt_main_image_count">0/5</string>
+    <string name="home_product_add_title">상품 등록</string>
+    <string name="main_image_title">상품 이미지 (최대 5개)</string>
+    <string name="main_image_count">0/5</string>
     <string name="prompt_product_name">상품명</string>
     <string name="prompt_category_main">대분류</string>
     <string name="prompt_category_mid">중분류</string>
@@ -247,6 +248,8 @@
     <string name="guide_product_list">등록한 상품 목록을 확인할 수 있습니다.</string>
     <string name="guide_product_detail">상품의 상세 정보와 판매자 앱에서 보일 화면의 미리보기를 확인할 수 있습니다.</string>
     <string name="button_delete_image">이미지 삭제 버튼</string>
+
+    <!-- Strings related to menu -->
     <string name="product_manage_subheader_title">상품 관리</string>
     <string name="add_product_title">상품 등록</string>
     <string name="view_modify_product_title">상품 조회/수정</string>
@@ -257,6 +260,8 @@
     <string name="setting_title">설정</string>
     <string name="menu_title">메뉴</string>
     <string name="mypage_title">마이페이지</string>
+
+    <!-- Strings related to mypage -->
     <string name="label_edit_password">비밀번호 수정</string>
     <string name="label_payment_completed">결제완료</string>
     <string name="no_order">이런! 주문이 없네요</string>
@@ -336,5 +341,14 @@ Swimmer은 다음의 목적을 위하여 개인정보를 처리하고 있으며,
 ① ‘Swimmer’은 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. 이용자는 쿠키 설치에 대한 선택권을 가지고 있으며, 웹브라우저의 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\n
 ]]>
 </string>
+    <string name="home_order_title">주문/배송</string>
+    <string name="label_order_cancel">주문 취소</string>
+    <string name="label_order_exchange">교환 신청</string>
+    <string name="_5">5</string>
+    <string name="default_order_count">5건</string>
+    <string name="label_order_refund">환불 신청</string>
+    <string name="seller_guide_title">판매자 가이드</string>
+    <string name="seller_guide_subject">상품 등록 가이드</string>
+    <string name="seller_guide_content">SWIMMER 앱에서 당신의 상품을 판매해보세요!</string>
 
 </resources>
