--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="error_invalid_email_format">이메일 양식이 올바르지 않습니다.</string>
     <string name="error_password_length">비밀번호는 6자 이상이어야 합니다.</string>
     <string name="error_password">비밀번호를 확인해주세요.</string>
+    <string name="duplicate_password">현재 비밀번호와 일치합니다. 다른 비밀번호를 입력해주세요.</string>
     <string name="error_passwords_not_match">비밀번호가 일치하지 않습니다.</string>
     <string name="error_consent_required">정보 동의를 체크해주세요.</string>
     <string name="findinfokey">key</string>
