--- a/Swimmer_customer/app/src/main/res/values/strings.xml
+++ b/Swimmer_customer/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="signup_failure">회원가입에 실패했습니다.</string>
     <string name="error_email_already_exists">이미 존재하는 이메일입니다.</string>
     <string name="password_modify_success">비밀번호가 변경되었습니다.</string>
+    <string name="withdrawal_success">회원 탈퇴 처리가 완료되었습니다.</string>
     <string name="modifypassword_relogin">안전한 서비스 이용을 위해 다시 로그인해 주시기 바랍니다.</string>
     <string name="password_modify_failure">비밀번호 변경에 실패하였습니다.</string>
     <string name="message_email_available">이메일을 사용할 수 있습니다.</string>
